<resources>
    ources>
    <string name="app_name">Squenda</string>
    <string name="my_home">My Home</string>
    <string name="all_devices">All Devices</string>
    <string name="living_room">Living Room</string>
    <string name="devices">Devices</string>
    <string name="chandelier">Chandelier</string>
    <string name="Table_light">Table Light</string>
    <string name="curtain">Curtain</string>
    <string name="music">Music</string>
    <string name="radiator">Radiator</string>
    <string name="fan">Fan</string>
    <string name="temp">Temp</string>
    <string name="bath_room">Bath Room</string>
    <string name="bed_room">Bed Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="call">Call</string>
    <string name="motion_sensor">Motion Sensor</string>
    <string name="lighting">Ligthing</string>
    <string name="smoke_alarm">Smoke alarm</string>
    <string name="windows_and_door"><![CDATA[windows & door]]></string>
    <string name="tempretur">Temprature</string>
    <string name="camera">Camera</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="action_ok">Ok</string>
    <string name="permission_alert_dialog_title">permission alert</string>
    <string name="permission_dialog_message">application needs your permissions</string>
    <string name="settings">Settings</string>
    <string name="add_new_device">Add a new device</string>
    <string name="my_family">My Family</string>
    <string name="notifications">Notifications</string>
    <string name="home_program">Home Program</string>
    <string name="countres_and_time"><![CDATA[Countres & Time]]></string>
    <string name="data_and_storage"><![CDATA[Data & Storage]]></string>
    <string name="privacy_and_security"><![CDATA[Privacy & Security]]></string>
    <string name="display_brigthness_sounds"><![CDATA[Display,Brightness & Sounds]]></string>
    <string name="emergency_sos">Emergency SOS</string>
    <string name="services">Services</string>
    <string name="language">Language</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="about_us">About Us</string>

    <string name="title_activity_media">MediaActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="live">Live</string>
    <string name="rec">REC</string>
    <string name="End">End</string>
    <string name="notification">Notification</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="videos">Videos</string>
    <string name="photes">Photos</string>

    <string name="title_activity_setting">SettingActivity</string>

    <string name="title_activity_all_devices">AllDevicesActivity</string>

    <string name="title_activity_call">CallActivity</string>

    <string name="title_activity_notification">NotificationActivity</string>
    <string name="back_door">Back Door</string>
    <string name="front_door">Front Door</string>
    <string name="title_activate_code">Redeem your registration code and activate your guarantee</string>
    <string name="serial_number">Enter serial number</string>
    <string name="active">Active</string>
    <string name="activated_message">Sqenda is activated!</string>
    <string name="countries_and_time">Countries and Time</string>
    <string name="done">DONE</string>
    <string name="theme">Theme</string>
    <string name="melody">Melody</string>
    <string name="reflection">Reflection</string>
    <string name="services_message1">Your service and support coverage</string>
    <string name="services_message2">Serial number:</string>
    <string name="services_message3">Garantee</string>
    <string name="door1">Door 1</string>
    <string name="door2">Door 2</string>
    <string name="inter_com">InterCom</string>
    <string name="autoCall">Auto Call</string>
    <string name="keep_media">Keep Media</string>
    <string name="store_msg">Videos, Photos files from cloud that you have not accessed during this period will be
        removed.
    </string>
    <string name="photo">Photo</string>
    <string name="storage">Storage</string>
    <string name="reset">Reset</string>
    <string name="sqenda">Sqenda</string>
    <string name="sdcard">SD Card</string>
    <string name="storage_message">Copy all data to SD card</string>
    <string name="one_week">1 week</string>
    <string name="one_month">1 month</string>
    <string name="for_ever">Forever</string>
    <string name="activation_code_entry_msg">Please enter your serial number</string>
    <string name="activation_code_err_msg">Wrong serial number</string>
    <string name="are_you_sure_reset_memory">Are you sure to reset?</string>
    <string name="reser_successfully_message">Reset Successfully</string>
    <string name="are_you_sure">Are you sure?</string>


    <!--extra -->
    <string-array name="indicator_style">
        <item>None</item>
        <item>Circle</item>
        <item>Icon</item>
    </string-array>
    <string-array name="indicator_gravity_hor">
        <item>Left</item>
        <item>Right</item>
        <item>Center</item>
    </string-array>
    <string-array name="indicator_gravity_ver">
        <item>Top</item>
        <item>Bottom</item>
        <item>Center</item>
    </string-array>

    <!--hardware-->

    <!-- Main activity strings -->

    <string name="action_settings">Settings</string>
    <string name="title_section1">UART</string>
    <string name="title_section2">I2C</string>
    <string name="title_section3">GPIO</string>


    <!-- String values for UART fragment -->

    <string name="uart_command_hint">Some text</string>
    <string name="uart_command_btn">Send</string>


    <!-- String values for I2C fragment -->

    <string name="i2c_contol_label">Controls</string>
    <string name="i2c_read_title">Read</string>
    <string name="i2c_action_spinner">Action:</string>
    <string name="i2c_bus_spinner">I2C-bus:</string>
    <string name="i2c_address_label">Address:</string>
    <string name="i2c_register_label">Register:</string>
    <string name="i2c_data_label">Data:</string>
    <string name="i2c_execute_button">Execute</string>
    <string name="i2c_status_label">Status:</string>
    <string name="i2c_bytes_label">Bytes:</string>


    <!-- Strings values for GPIO fragment -->
    <string name="gpio_number_label">GPIO</string>
    <string name="gpio_direction_label">DIRECTION</string>
    <string name="gpio_level_label">LEVEL</string>
    <string name="gpio_status_label">STATUS</string>
    <string name="gpio_direction_on">INPUT</string>
    <string name="gpio_direction_off">OUTPUT</string>
    <string name="gpio_level_on">HIGH</string>
    <string name="gpio_level_off">LOW</string>
</resources>
