<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_door1"
            android:enabled="true"
            android:icon="@drawable/ic_windows_door"
            android:title="@string/door1"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_door2"
            android:enabled="true"
            android:icon="@drawable/ic_windows_door"
            android:title="@string/door2"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_intercom"
            android:enabled="true"
            android:icon="@drawable/ic_windows_door"
            android:title="@string/inter_com"
            app:showAsAction="ifRoom"/>
</menu>