<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackGround"
        tools:context=".activities.EnterCodeActivity">
    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colordarkGray"
            android:text="@string/title_activate_code"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
    />
    <TextView
            android:id="@+id/serialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colordarkGray"
            android:text="@string/serial_number"
            android:layout_below="@+id/title"
            android:textSize="13sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
    />

    <LinearLayout
            android:id="@+id/rl_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serialNumber"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
    >
        <EditText
                android:id="@+id/edit_1"
                android:layout_width="60dp" android:layout_height="30dp"
                android:background="@drawable/rectangle_active_code"
                android:textSize="12sp"
                android:textAlignment="center"
        />

        <View
                android:layout_width="10dp" android:layout_height="2dp"
                android:background="@color/cardview_light_background"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
        />
        <EditText
                android:id="@+id/edit_2"
                android:layout_width="60dp" android:layout_height="30dp"
                android:background="@drawable/rectangle_active_code"
                android:textSize="12sp"
                android:textAlignment="center"
        />

        <View
                android:layout_width="10dp" android:layout_height="2dp"
                android:background="@color/cardview_light_background"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
        />
        <EditText
                android:id="@+id/edit_3"
                android:layout_width="60dp" android:layout_height="30dp"
                android:background="@drawable/rectangle_active_code"
                android:textSize="12sp"
                android:textAlignment="center"
        />

        <View
                android:layout_width="10dp" android:layout_height="2dp"
                android:background="@color/cardview_light_background"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
        />
        <EditText
                android:id="@+id/edit_4"
                android:layout_width="60dp" android:layout_height="30dp"
                android:background="@drawable/rectangle_active_code"
                android:textSize="12sp"
                android:textAlignment="center"
        />

        <View
                android:layout_width="10dp" android:layout_height="2dp"
                android:background="@color/cardview_light_background"
                android:layout_gravity="center_vertical"
                android:layout_margin="8dp"
        />
        <EditText
                android:id="@+id/edit_5"
                android:layout_width="60dp" android:layout_height="30dp"
                android:background="@drawable/rectangle_active_code"
                android:textSize="12sp"
                android:textAlignment="center"
        />


    </LinearLayout>

    <FrameLayout
            android:id="@+id/fr_activation_btn"

            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:layout_below="@+id/rl_code"
            android:paddingBottom="10dp"
            android:layout_centerHorizontal="true"
            android:foreground="?attr/selectableItemBackground">

        <Button
                android:id="@+id/btn_active"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/active"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangle_activate_white"/>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/fr_msg"
            android:layout_width="580dp" android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:alpha=".6"
            android:elevation="4dp"
            android:background="@drawable/activation_code_msg"

    >
        <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"

        >

            <TextView
                    android:id="@+id/txt_err"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activation_code_entry_msg"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
            />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_close"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@drawable/ic_close"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:tint="@android:color/white"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ripple"
            />

        </RelativeLayout>

    </FrameLayout>


</RelativeLayout>