<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorBackGround"
                    tools:context=".activities.MyHomeActivity">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:layout_alignParentTop="true"
            android:elevation="4dp"
    >
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/rl_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:padding="8dp"
            >

                <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"

                        android:layout_marginLeft="20dp"
                        android:text="9:41"
                        android:textColor="@android:color/white"

                />
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_handset_connected"
                        android:layout_width="15sp"
                        android:layout_height="15sp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_handset_connected"
                />
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_battery"
                        android:layout_width="15sp"
                        android:layout_height="15sp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_battery"
                />


                <TextView
                        android:id="@+id/txt_tempreture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@android:color/white"
                        android:text="21C"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/white"
                        android:text="C"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/white"
                        android:text="|"
                />
                <TextView
                        android:id="@+id/txt_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@android:color/white"
                        android:text="Sunday , March 10"
                />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_back_home"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_below="@+id/rl_status"
                    android:layout_marginLeft="30dp"
                    android:tint="@android:color/white"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:layout_marginTop="10dp"
            />
        </RelativeLayout>

    </FrameLayout>
        <FrameLayout
                android:id="@+id/rl_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:elevation="8dp"
                android:alpha=".5"
                android:background="@color/black_overlay"
        >
            <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:elevation="4dp"
                    android:weightSum="1">
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_profile_home"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="25dp"
                        android:layout_weight=".25"
                        android:tint="@color/colordarkGray"
                        android:background="@drawable/ripple"
                        android:src="@drawable/ic_profile" />
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_home_home"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="25dp"
                        android:background="@drawable/ripple"
                        android:layout_weight=".25"
                        android:src="@drawable/ic_home" />
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_location_home"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_margin="25dp"
                        android:background="@drawable/ripple"
                        android:layout_weight=".25"
                        android:tint="@color/colordarkGray"
                        android:src="@drawable/ic_loc" />
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_setting_home"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_margin="25dp"
                        android:background="@drawable/ripple"
                        android:layout_weight=".25"
                        android:tint="@color/colordarkGray"
                        android:src="@drawable/ic_setting" />

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
                android:id="@+id/my_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_home"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_notification"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical|center"
                    android:layout_marginLeft="40dp"
                    android:tint="@android:color/white"
                    android:background="@drawable/ripple"

                    android:src="@drawable/ic_notifications_none_black_24dp" />
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/rl_all"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_below="@id/my_home"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/rl_main_menu"
                android:background="@drawable/my_home_all_home">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/all_devices"
                    android:textColor="@color/colordarkGray"
                    android:textSize="18sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="45"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_all"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:weightSum="2"
                android:layout_toLeftOf="@+id/rl_main_menu"

        >

            <RelativeLayout
                    android:id="@+id/rl_living_room"
                    android:layout_width="110dp"
                    android:layout_height="160dp"
            >

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:src="@drawable/img_livingroom" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/living_room"
                        android:textColor="@color/colordarkGray"
                        android:textSize="12sp"
                />

                <TextView
                        android:id="@+id/txt_living_room_devices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="8dp"
                        android:text="9 devices"
                        android:textColor="@color/colordarkGray"
                        android:textSize="10sp"
                />

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/rl_bathroom">

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:src="@drawable/img_bathroom"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/bath_room"
                        android:textColor="@color/colordarkGray"
                        android:textSize="12sp"
                />

                <TextView
                        android:id="@+id/txt_bath_room_devices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="8dp"
                        android:text="2 devices"
                        android:textColor="@color/colordarkGray"
                        android:textSize="10sp"
                />

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/rl_bedroom">

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:src="@drawable/img_bedroom"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/bed_room"
                        android:textColor="@color/colordarkGray"
                        android:textSize="12sp"
                />

                <TextView
                        android:id="@+id/txt_bed_room_devices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="8dp"
                        android:text="5 devices"
                        android:textColor="@color/colordarkGray"
                        android:textSize="10sp"
                />

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="110dp"
                    android:layout_height="160dp"
                    android:id="@+id/rl_kitchen">

                <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight=".5"
                        android:src="@drawable/img_kitchen"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/kitchen"
                        android:textColor="@color/colordarkGray"
                        android:textSize="12sp"
                />

                <TextView
                        android:id="@+id/txt_kitchen_devices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="5dp"
                        android:text="3 devices"
                        android:textColor="@color/colordarkGray"
                        android:textSize="10sp"
                />
            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

